--- a/package.json
+++ b/package.json
@@ -31,10 +31,13 @@
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "^2.13.0",
     "ember-export-application-global": "^2.0.0",
+    "ember-fetch": "^3.0.2",
+    "ember-legit-forms": "^2.1.0",
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.13.0",
     "ember-welcome-page": "^3.0.0",
+    "emberx-select": "^3.0.1",
     "loader.js": "^4.2.3"
   },
   "engines": {
