--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ember-fetch": "^3.0.2",
     "ember-legit-forms": "^2.1.0",
     "ember-load-initializers": "^1.0.0",
+    "ember-power-select": "^1.8.5",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.13.0",
     "ember-welcome-page": "^3.0.0",
